--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -514,6 +514,7 @@ limitations under the License. -->
     <string name="table_column_Assets">Wertpapierbestände</string>
     <string name="table_column_Events">Ereignisse</string>
     <string name="table_column_Note">Anmerkung</string>
+    <string name="table_column_Provider">Datenanbieter</string>
     <string name="marketStatePRE">Vorbörse</string>
     <string name="marketStatePREPRE">Vorbörse noch nicht geöffnet</string>
     <string name="marketStateREGULAR">Geöffnet</string>
@@ -633,4 +634,6 @@ limitations under the License. -->
     <string name="button_set_alert_default">±5\u0025 setzen</string>
     <string name="display_name">Anzeigename</string>
     <string name="name_added">Der Anzeigename wurde von \'%1$s\' nach \'%2$s\' geändert.</string>
+    <string name="name_reset">Der Anzeigename wurde zu \'%1$s\' zurückgesetzt.</string>
+    <string name="change">Ändern</string>
 </resources>
