add menu ByPurchaseprice

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,9 +68,9 @@ limitations under the License. -->
     <string name="button_add">Add</string>
     <string name="sort_change_percentage">Sort by Change \u0025</string>
     <string name="sort_name">Sort by Name</string>
+    <string name="sort_purchaseprice">Sort by Purchaseprice</string>
     <string name="sort_assets">Sort by Assets</string>
-    <string name="sort_profit">Sort by Gain</string>
-
+   <string name="sort_profit">Sort by Gain</string>
     <string name="sort_profit_percentage">Sort by Gain \u0025</string>
     <string name="sort_dividend_percentage">Sort by Dividend \u0025</string>
     <string name="sort_group">Sort by Group</string>
