--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -99,6 +99,7 @@ limitations under the License. -->
     <string name="button_add">Hinzufügen</string>
     <string name="sort_change_percentage">Nach Änderung \u0025 sortieren</string>
     <string name="sort_name">Nach Namen sortieren</string>
+    <string name="sort_purchaseprice">Nach Kaufpreis sortieren</string>
     <string name="sort_assets">Nach Bestand sortieren</string>
     <string name="sort_profit">Nach Gewinn sortieren</string>
     <string name="sort_profit_percentage">Nach Gewinn \u0025 sortieren</string>
