--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,11 +66,13 @@ limitations under the License. -->
     <string name="menu_sort">Sort</string>
     <string name="hint_add_stock">Stock symbol</string>
     <string name="button_add">Add</string>
+    <string name="bought">Buy</string>
+    <string name="sold">Sell</string>
     <string name="sort_change_percentage">Sort by Change \u0025</string>
     <string name="sort_name">Sort by Name</string>
     <string name="sort_purchaseprice">Sort by Purchaseprice</string>
     <string name="sort_assets">Sort by Assets</string>
-   <string name="sort_profit">Sort by Gain</string>
+    <string name="sort_profit">Sort by Gain</string>
     <string name="sort_profit_percentage">Sort by Gain \u0025</string>
     <string name="sort_dividend_percentage">Sort by Dividend \u0025</string>
     <string name="sort_group">Sort by Group</string>
@@ -138,16 +140,16 @@ limitations under the License. -->
     <string name="delete_all_title">Delete all</string>
     <string name="delete_all_confirm">Are you sure?</string>
     <string name="delete_all_desc">Delete all stocks.</string>
-    <string name="quantity_not_zero">The number of shares must not be 0.</string>
+    <string name="quantity_not_zero">The number of shares must not be 0 or negative.</string>
     <string name="removed_quantity_exceed_existing">You remove more stocks than you own. The amount will be adjusted from %1$s to %2$s.</string>
     <string name="price_not_negative">The price of the stock must not be negative.</string>
-    <string name="add_asset">Add asset</string>
+    <string name="fee_not_negative">The fee must not be negative.</string>
+    <string name="bought_asset">Bought asset</string>
    <string name="move_asset">Move asset to another account</string>
-    <string name="remove_asset">Remove asset</string>
     <string name="current_assets">Assets</string>
     <string name="current_portfolio_graph">Current portfolio, top 10 stocks</string>
     <string name="update_asset">Update asset</string>
-    <string name="delete_asset">Delete from asset</string>
+    <string name="sold_asset">Sold asset</string>
     <string name="delete_all_assets">Delete all assets</string>
     <string name="delete_all_assets_msg">All assets are deleted from the portfolio.</string>
     <string name="delete_all_assets_confirm">Are you sure to delete all assets of \'%1$s\' from your portfolio?</string>
@@ -616,8 +618,10 @@ limitations under the License. -->
     <string name="asset_same_account">Accounts must be different.</string>
     <string name="move">Move</string>
     <string name="add_assets_first">Add an asset first.</string>
+    <string name="transaction_fee">Fee</string>
+    <string name="transaction_forfree">For free</string>
 
- <string-array name="predefined_groups">
+    <string-array name="predefined_groups">
         <item>Buy</item>
         <item>Sell</item>
         <item>Watch</item>
