--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -105,6 +105,7 @@ limitations under the License. -->
     <string name="sort_assets">Nach Bestand sortieren</string>
     <string name="sort_profit">Nach Gewinn sortieren</string>
     <string name="sort_profit_percentage">Nach Gewinn \u0025 sortieren</string>
+    <string name="sort_marketcap">Nach Marktkapitalisierung sortieren</string>
     <string name="sort_dividend_percentage">Nach Dividende \u0025 sortieren</string>
     <string name="sort_group">Nach Gruppe sortieren</string>
     <string name="sort_marker">Nach Markierung sortieren</string>
