add marketcap to table view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -484,6 +484,7 @@ limitations under the License. -->
     <string name="table_column_AssetChange">Asset change</string>
     <string name="table_column_AssetFee">Fee</string>
     <string name="table_column_AssetTotalFees">Total fees</string>
+    <string name="table_column_Marketcap">Market Capitalization</string>
     <string name="table_column_Dividend">Dividend</string>
     <string name="table_column_AlertAbove">Alert Above</string>
     <string name="table_column_AlertBelow">Alert Below</string>
