--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -515,6 +515,7 @@ limitations under the License. -->
     <string name="table_column_AssetChange">Bestandsänderung</string>
     <string name="table_column_AssetFee">Gebühr</string>
     <string name="table_column_AssetTotalFees">Gesamt- Gebühren</string>
+    <string name="table_column_Marketcap">Marktkapitalisierung</string>
     <string name="table_column_Dividend">Dividende</string>
     <string name="table_column_AlertAbove">Benachrichtigung über</string>
     <string name="table_column_AlertBelow">Benachrichtigung unter</string>
