--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -660,7 +660,7 @@ limitations under the License. -->
         <item>Coingecko (Cryptocurrency, max 50 calls/min)</item>
         <item>Coinpaprika (Cryptocurrency, updated every 2min)</item>
         <item>Gemini (Cryptocurrency, max 120 calls/min)</item>
-        <item>None</item>
+        <item>&lt;None&gt;</item>
     </string-array>
 
 </resources>
