add OKX data provider

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -84,6 +84,7 @@ limitations under the License. -->
         <item>Coingecko (Kryptowährung, max 50 Aufrufe/min)</item>
         <item>Coinpaprika (Kryptowährung, aktualisiert alle 2min)</item>
         <item>Gemini (Kryptowährung, max 120 Aufrufe/min)</item>
+        <item>OKX (Kryptowährung, max 10 Aufrufe/s)</item>
         <item>&lt;Kein Datenanbieter&gt;</item>
     </string-array>
 
